front U11: Responsivness added for phone

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App</title>
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/chatbyte-b50a1.appspot.com/o/icon.png?alt=media&token=f572bae7-c032-4f6b-82d7-89b5b4754845" />
+    <title>ChatByte</title>
   </head>
   <body>
     <div id="root"></div>
